docs: add Cursor Cloud setup instructions to AGENTS.md
Co-authored-by: snepple <snepple@users.noreply.github.com>